bitbybit/tests/no_compile/invalid_bit_pos/invalid_bit_pos_array_field_u7.rs
use bitbybit::bitfield;

#[bitfield(u7, default = 0)]
struct Test {
    #[bit(0, rw)]
    array_field: [bool; 8],
}

fn main() {}
