bitbybit/tests/no_compile/invalid_bit_pos/invalid_bit_pos_array_field_u7.stderr
error: bitfield!: Array-field array_field requires 8 bits for the array, but only has (7)
 --> tests/no_compile/invalid_bit_pos/invalid_bit_pos_array_field_u7.rs:5:5
  |
5 |     #[bit(0, rw)]
  |     ^^^^^^^^^^^^^
